--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alabaster==0.7.12
 anyio @ file:///opt/concourse/worker/volumes/live/4ff95164-2ca6-4efb-5c02-5afee907620d/volume/anyio_1617783322708/work/dist
 appnope @ file:///opt/concourse/worker/volumes/live/4f734db2-9ca8-4d8b-5b29-6ca15b4b4772/volume/appnope_1606859466979/work
 argon2-cffi @ file:///opt/concourse/worker/volumes/live/4afd07c8-7fc3-4a09-6326-d8c70269eb33/volume/argon2-cffi_1613037490059/work
+astroid @ file:///opt/concourse/worker/volumes/live/01c50b87-8e55-459e-4414-aafec6553923/volume/astroid_1626766661398/work
 async-generator==1.10
 attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
 Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
@@ -11,17 +13,21 @@ certifi==2021.5.30
 cffi @ file:///opt/concourse/worker/volumes/live/4a8f7628-1917-402a-5a6a-cdafcc3ec547/volume/cffi_1625814707380/work
 chardet @ file:///opt/concourse/worker/volumes/live/9efbf151-b45b-463d-6340-a5c399bf00b7/volume/chardet_1607706825988/work
 click==8.0.1
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
 cryptography @ file:///opt/concourse/worker/volumes/live/cdf8ff17-b0bf-4081-524c-b5a0afe929ba/volume/cryptography_1616769280208/work
 cycler==0.10.0
 decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+docutils @ file:///opt/concourse/worker/volumes/live/4d08a32e-3c8a-4d2d-4b17-f3c8b943d07b/volume/docutils_1620827969351/work
 entrypoints==0.3
 Flask==2.0.1
 idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
+imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
 importlib-metadata @ file:///opt/concourse/worker/volumes/live/4e25a0be-45cc-4b73-4314-4604f00e30a4/volume/importlib-metadata_1617877365451/work
 ipykernel @ file:///opt/concourse/worker/volumes/live/73e8766c-12c3-4f76-62a6-3dea9a7da5b7/volume/ipykernel_1596206701501/work/dist/ipykernel-5.3.4-py3-none-any.whl
 ipython @ file:///opt/concourse/worker/volumes/live/f33fa11b-d908-43e8-693a-f4b58d8c695c/volume/ipython_1617120878195/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+isort @ file:///tmp/build/80754af9/isort_1625834821980/work
 itsdangerous==2.0.1
 jedi==0.17.0
 Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
@@ -36,9 +42,12 @@ jupyter-server @ file:///opt/concourse/worker/volumes/live/8c909028-d80d-4303-58
 jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1619133235951/work
 jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
 jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1625823091337/work
+keyring @ file:///opt/concourse/worker/volumes/live/e0f57304-71e8-4059-5ecf-e3cfed2fbea0/volume/keyring_1621524568268/work
 kiwisolver==1.3.1
+lazy-object-proxy @ file:///opt/concourse/worker/volumes/live/62c2169c-fe65-46ff-434a-480cde88c65b/volume/lazy-object-proxy_1616529070475/work
 MarkupSafe @ file:///opt/concourse/worker/volumes/live/2165c944-5d03-464f-57c1-1df4e51b3ac3/volume/markupsafe_1621528146825/work
 matplotlib==3.4.2
+mccabe==0.6.1
 mistune==0.8.4
 nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
 nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
@@ -47,6 +56,7 @@ nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
 nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
 notebook @ file:///opt/concourse/worker/volumes/live/f984e24b-6ef4-4a5b-55be-c5db1417e27a/volume/notebook_1621528337539/work
 numpy==1.21.1
+numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
 packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
 pandas==1.3.0
 pandocfilters @ file:///opt/concourse/worker/volumes/live/315ac9bb-93fd-4adc-6795-345692fcfaed/volume/pandocfilters_1605120446899/work
@@ -56,9 +66,13 @@ pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==8.3.1
 prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
 prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
+psutil @ file:///opt/concourse/worker/volumes/live/8e01e0e9-ea07-4efa-7afb-fae37c1b9faa/volume/psutil_1612298009056/work
 ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1615748559966/work
 pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyflakes @ file:///tmp/build/80754af9/pyflakes_1617200973297/work
 Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
+pylint @ file:///opt/concourse/worker/volumes/live/4732f19f-4f05-4452-62ad-ffb8b2434156/volume/pylint_1625467690649/work
 pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
 pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
 pyrsistent @ file:///opt/concourse/worker/volumes/live/656e0c1b-ef87-4251-4a51-1290b2351993/volume/pyrsistent_1600141745371/work
@@ -66,7 +80,11 @@ PySocks @ file:///opt/concourse/worker/volumes/live/ef943889-94fc-4539-798d-461c
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
 pyzmq==20.0.0
+QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1623278325812/work
+QtPy==1.9.0
 requests @ file:///tmp/build/80754af9/requests_1608241421344/work
+rope @ file:///tmp/build/80754af9/rope_1623703006312/work
 scikit-learn==0.24.2
 scipy==1.7.0
 seaborn==0.11.1
@@ -74,14 +92,28 @@ Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
 six @ file:///tmp/build/80754af9/six_1623709665295/work
 sklearn==0.0
 sniffio @ file:///opt/concourse/worker/volumes/live/838fa2d9-a35b-4591-50ce-1f1a39baa1df/volume/sniffio_1614030463440/work
+snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
+Sphinx @ file:///tmp/build/80754af9/sphinx_1623884544367/work
+sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
+sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
+sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
+sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
+sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
+sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
+spyder==3.3.6
+spyder-kernels==0.5.2
 terminado==0.9.4
 testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
 threadpoolctl==2.2.0
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
 tornado @ file:///opt/concourse/worker/volumes/live/d531d395-893c-4ca1-6a5f-717b318eb08c/volume/tornado_1606942307627/work
 traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
+typed-ast @ file:///opt/concourse/worker/volumes/live/22984077-cbd4-449f-4417-2737b09fa494/volume/typed-ast_1624953682230/work
 typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
 urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==2.0.1
+wrapt==1.12.1
+wurlitzer @ file:///opt/concourse/worker/volumes/live/a07f2ad6-5a18-4b19-78a6-11eea045a34d/volume/wurlitzer_1617224647004/work
 zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
