--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,24 @@
-alabaster==0.7.12
-async-generator==1.10
-brotlipy==0.7.0
 certifi==2021.5.30
+charset-normalizer==2.0.3
 click==8.0.1
-cycler==0.10.0
-entrypoints==0.3
 Flask==2.0.1
+gunicorn==20.1.0
+heroku==0.1.4
+idna==3.2
+importlib-metadata==4.6.1
 itsdangerous==2.0.1
-jedi==0.17.0
+Jinja2==3.0.1
 joblib==1.0.1
 jsonify==0.5
-kiwisolver==1.3.1
-matplotlib==3.4.2
-mccabe==0.6.1
-mistune==0.8.4
+MarkupSafe==2.0.1
 numpy==1.21.1
-pandas==1.3.0
-Pillow==8.3.1
-pyzmq==20.0.0
-QtPy==1.9.0
+python-dateutil==1.5
+requests==2.26.0
 scikit-learn==0.24.2
 scipy==1.7.0
-seaborn==0.11.1
 sklearn==0.0
-spyder==3.3.6
-spyder-kernels==0.5.2
-terminado==0.9.4
 threadpoolctl==2.2.0
-webencodings==0.5.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
 Werkzeug==2.0.1
-wrapt==1.12.1
+zipp==3.5.0
