--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,1 @@
-certifi==2021.5.30
-charset-normalizer==2.0.3
-click==8.0.1
-Flask==2.0.1
-gunicorn==20.1.0
-heroku==0.1.4
-idna==3.2
-importlib-metadata==4.6.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
-jsonify==0.5
-MarkupSafe==2.0.1
-numpy==1.21.1
-python-dateutil==1.5
-requests==2.26.0
-scikit-learn==0.24.2
-scipy==1.7.0
-sklearn==0.0
-threadpoolctl==2.2.0
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-Werkzeug==2.0.1
-zipp==3.5.0
+requirements.txt
