--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
-requirements.txt
+async-generator==1.10
+certifi==2021.5.30
+chardet==3.0.4
+charset-normalizer==2.0.3
+click==8.0.1
+entrypoints==0.3
+Flask==2.0.1
+gunicorn
+heroku==0.1.4
+idna==3.2
+importlib-metadata==4.6.1
+itsdangerous==2.0.1
+jedi==0.17.0
+Jinja2==3.0.1
+joblib==1.0.1
+jsonify==0.5
+MarkupSafe==2.0.1
+mistune==0.8.4
+numpy==1.21.1
+python-dateutil==1.5
+pyzmq==20.0.0
+requests==2.26.0
+scikit-learn==0.24.2
+scipy==1.7.0
+sklearn==0.0
+terminado==0.9.4
+threadpoolctl==2.2.0
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+webencodings==0.5.1
+Werkzeug==2.0.1
+zipp==3.5.0
